--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,9 +20,21 @@ body {
 }
 
 /* Header */
+header {
+    background-color: #EBD8D0;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+}
+
+#logo {
+    width: 200px;
+}
 
 /* Main Content */
 main {
+    background-color: #EBD8D0;
     /* Enlarge main element to push footer down*/
     flex: 1 0 auto;
     /* Enable flex properties for child elements */
