--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,11 +30,16 @@ header {
 
 #logo {
     height: 60px;
+    margin-bottom: .5em;
 }
 
 header a {
     text-decoration: none;
     color: inherit;
+}
+
+nav {
+    margin-left: 1em;
 }
 
 #menu {
@@ -48,6 +53,22 @@ header a {
 
 .active {
     border-bottom: 1px solid #3a3a3a;
+}
+
+.book-appointment-button {
+    background-color: #d3ab9e;
+    color: #4B3621;
+    padding: .5em;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    border-radius: 7px;
+    border: 0px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    transition: background-color 0.3s ease;
+}
+
+.book-appointment-button:hover {
+    background-color: #f0f0f0; /* Hover background color */
 }
 
 /* Main Content */
