--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,10 +38,6 @@ header a {
     color: inherit;
 }
 
-nav {
-    margin-left: 1em;
-}
-
 #menu {
     letter-spacing: 2px;
     list-style-type: none;
@@ -63,12 +59,24 @@ nav {
     font-weight: 600;
     border-radius: 7px;
     border: 0px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
     transition: background-color 0.3s ease;
+    margin-bottom: 1rem;
 }
 
 .book-appointment-button:hover {
     background-color: #f0f0f0; /* Hover background color */
+}
+
+/* Navbar dropdown toggle */
+nav {
+    position: absolute;
+    padding-left: 1em;
+    background-color: #EBD8D0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    display: none;
 }
 
 /* Main Content */
