--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,6 +105,7 @@ main {
     /* Enable flex properties for child elements */
     display: flex;
     flex-direction: column;
+    margin-top: 73px;
 }
 
 /* Footer */
