--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,7 +116,27 @@ main {
     margin-top: 83px;
 }
 
-/* 404 */
+/* Contact Page */
+.contact-container {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.contact-form-container {
+    flex: 1;
+}
+
+.contact-img-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+
+/* 404 Page */
 .error-page-container {
     height: 100vh;
     width: 100vw;
