--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -117,10 +117,22 @@ main {
 }
 
 /* Contact Page */
-.contact-container {
-    margin-top: 100px;
+.contact-div {
+    height: 100vh;
+    width: 100vw;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-container {
+    background-color: #FDE9EA;
+    width: 80%;
+    height: 80%;
+    margin-top: 60px;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     gap: 30px;
@@ -128,6 +140,35 @@ main {
 
 .contact-form-container {
     flex: 1;
+    width: 60%;
+}
+
+.contact-form-container h1 {
+    font-size: 1.3rem;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.text-input {
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #d3ab9e;
+    border-radius: 5px;
+}
+
+.textarea {
+    width: 100%;
+    height: 60px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #d3ab9e;
+    border-radius: 5px;
 }
 
 .contact-img-container {
