--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -117,6 +117,53 @@ main {
     margin-top: 83px;
 }
 
+/* Home Page */
+section {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #EBD8D0;
+}
+
+.hero-container {
+    width: 100%;
+    margin: 0 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-left {
+    width: 100%;
+    height: 300px;
+    background: url("../images/temporaryimage.jpg") no-repeat center / cover;
+}
+
+.hero-right {
+    width: 90%;
+    min-height: 200px;
+    background-color: #FDE9EA;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    margin-top: -100px;
+}
+
+.hero-right h1 {
+    font-size: 40px;
+    font-weight: lighter;
+    font-family: 'great vibes', sans-serif;
+}
+
+.hero-right p {
+    margin: 20px 0;
+    font-weight: 500;
+    line-height: 25px;
+}
+
 /* Contact Page */
 .contact-div {
     height: 100vh;
@@ -320,13 +367,6 @@ footer {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
-
-    /* Contact page */
-    .contact-container {
-        flex-direction: row;
-        padding-left: 50px;
-    }
-
 
     /* Footer */
     footer {
