--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,6 +124,7 @@ section {
     align-items: center;
     justify-content: center;
     background-color: #EBD8D0;
+    margin-bottom: 30px;
 }
 
 .hero-container {
@@ -137,7 +138,7 @@ section {
 
 .hero-left {
     width: 100%;
-    height: 300px;
+    height: 500px;
     background: url("../images/temporaryimage.jpg") no-repeat center / cover;
 }
 
@@ -153,6 +154,7 @@ section {
 }
 
 .hero-right h1 {
+    text-align: center;
     font-size: 40px;
     font-weight: lighter;
     font-family: 'great vibes', sans-serif;
@@ -333,7 +335,19 @@ footer {
         margin-top: 138px;
     }
 
+    /* Home Page */
+    .hero-container {
+        flex-direction: row-reverse;
+    }
+
+    .hero-right {
+        margin: 0;
+        margin-right: -100px;
+        z-index: 10;
+    }
+
     /* Contact form */
+
     .contact-form-container h1 {
         font-size: 2rem;
     }
@@ -366,6 +380,21 @@ footer {
     /* Header */
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    /* Home Page */
+    .hero-container {
+        max-width: 1000px;
+    }
+
+    .hero-left {
+        width: 80%;
+    }
+
+    /* Contact page */
+    .contact-container {
+        flex-direction: row;
+        padding-left: 50px;
     }
 
     /* Footer */
