--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -463,6 +463,31 @@ footer {
         font-size: larger;
     }
 
+    /* Pricelist Page */
+    .pricelist {
+        position: relative;
+        flex-direction: row;
+        margin: 0 40px;
+        height: 70%;
+    }
+
+    .pricelist-page-container h1 {
+        position: absolute;
+        top: 100px;
+        left: 17%;
+    }
+
+    .pricelist button {
+        position: absolute;
+        bottom: 100px;
+        left: 15%;
+    }
+
+    .pricelist-left,
+    .pricelist-right {
+        text-align: center;
+    }
+
     /* Contact form */
 
     .contact-form-container h1 {
@@ -514,6 +539,12 @@ footer {
     .home-services-img {
         width: 25%;
         height: 100%;
+    }
+
+    /* Pricelist Page */
+    .pricelist {
+        max-width: 1000px;
+        margin: 0 auto;
     }
 
     /* Contact page */
