--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -254,6 +254,52 @@ main {
     font-weight: 200;
 }
 
+.services-bottom-section {
+    margin: 0 10px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.services-image-container {
+    height: 100%;
+    width: 200px;
+    padding: 30px 0;
+    background-color: #FDE9EA;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.service-container {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.service-image {
+    width: 260px;
+    height: 260px;
+    border: 5px solid #4B3621;
+}
+
+.service-1 {
+    background: url("../images/services-1.webp") no-repeat center / cover;
+}
+.service-2 {
+    background: url("../images/services-2.webp") no-repeat center / cover;
+}
+.service-3 {
+    background: url("../images/services-3.webp") no-repeat center / cover;
+}
+
 /* Pricelist Page */
 
 .pricelist-page-container {
