--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,16 @@ header {
     justify-content: space-between;
 }
 
+.sr-only:not(:focus):not(:active) {
+    clip: rect(0 0 0 0); 
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap; 
+    width: 1px;
+  }
+
 #logo {
     width: 100%;
     height: 70px;
